remove release-it

--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
   "version": "1.0.0",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && tsc && cp package.json README.md ./dist",
-    "release": "release-it --no-git"
+    "build": "npm run clean && tsc && cp package.json README.md ./dist"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "release-it": "^15.10.3",
     "typescript": "^4.9.5"
   },
   "keywords": [
