update readme and ci

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: olegtarasov/get-tag@v2.1.2
       - run: npm version ${{ env.GIT_TAG_NAME }} --no-git-tag-version
       - run: npm run build
-      - run: npm publish
+      - run: npm publish ./dist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
