--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cloudflare-image-resize",
+  "name": "cloudflare-image",
   "author": "Bryan Low <git@lowbryan.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/keyute/cloudflare-image-resize.git"
+    "url": "https://github.com/keyute/cloudflare-image.git"
   },
   "version": "1.0.0",
   "scripts": {
@@ -12,16 +12,16 @@
     "build": "npm run clean && tsc && cp package.json README.md ./dist"
   },
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.2"
   },
   "keywords": [
     "cloudflare",
     "image",
-    "resize",
-    "typescript"
+    "typescript",
+    "react"
   ]
 }
